<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">수업 알리미</string>

    <!-- Common -->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="add">추가</string>
    <string name="settings">설정</string>
    <string name="back">뒤로</string>

    <!-- Main Activity -->
    <string name="main_title">나의 시간표</string>
    <string name="no_courses">등록된 수업이 없습니다</string>
    <string name="add_course">수업 추가</string>
    <string name="sync_lms">LMS 동기화</string>
    <string name="test_notification">알림 테스트</string>

    <!-- Settings -->
    <string name="notification_settings">알림 설정</string>
    <string name="notification_enabled">알림 활성화</string>
    <string name="vibration_enabled">진동</string>
    <string name="sound_enabled">소리</string>
    <string name="notification_mode">알림 모드</string>
    <string name="select_mode">모드 선택</string>
    <string name="app_theme">앱 테마</string>
    <string name="select_theme">테마 선택</string>
    <string name="lms_settings">LMS 설정</string>
    <string name="lms_url">LMS URL</string>
    <string name="lms_username">사용자 ID</string>
    <string name="lms_password">비밀번호</string>

    <!-- LMS Login -->
    <string name="lms_login">LMS 로그인</string>
    <string name="login">로그인</string>
    <string name="login_success">로그인 성공!</string>
    <string name="login_failed">로그인 실패</string>
    <string name="url_hint">https://lms.university.ac.kr</string>
    <string name="username_hint">학번</string>
    <string name="password_hint">비밀번호</string>
    <string name="fetching_timetable">시간표 가져오는 중...</string>
    <string name="fetch_success">시간표를 가져왔습니다</string>
    <string name="fetch_failed">시간표 가져오기 실패</string>
    <string name="use_sample_data">샘플 데이터 사용</string>

    <!-- Course Details -->
    <string name="course_name">수업명</string>
    <string name="instructor">교수님</string>
    <string name="room">강의실</string>
    <string name="day_of_week">요일</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="color">색상</string>

    <!-- Days -->
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>

    <!-- Notification -->
    <string name="notification_channel_name">수업 알림</string>
    <string name="notification_channel_desc">수업 시작 1시간 전 알림</string>

    <!-- Messages -->
    <string name="course_added">수업이 추가되었습니다</string>
    <string name="course_deleted">수업이 삭제되었습니다</string>
    <string name="settings_saved">설정이 저장되었습니다</string>
    <string name="alarms_scheduled">알림이 설정되었습니다</string>
    <string name="test_notification_sent">테스트 알림이 전송되었습니다</string>
</resources>
